k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: lascoski/projetofinancas-backend:1.0.3

          ports:
            - containerPort: 5000
